# microservices-cpp-demonstration

./: CMakeLists.txt  README.md  build_release_script.bat  conanfile.py  project-structure.txt
common/: config_manager.cpp  config_manager.h
common/database/: IDatabaseConnection.h  SQLiteConnection.cpp  SQLiteConnection.h
common/proto/: user_service.proto
common/service_discovery/: ConsulDiscovery.cpp  ConsulDiscovery.h  IServiceDiscovery.h
config/: config.yaml
databases/: Users.db
gateway/: gateway_service.cpp  gateway_service.h  main.cpp
services/user/: main.cpp  user_service.cpp  user_service.h
services/user/business/: user_handler.cpp  user_handler.h
services/user/data-structures/: User.cpp  User.h
services/user/repositories/: IUserRepository.h  SQLiteUserRepository.cpp  SQLiteUserRepository.h
uml/: class_diagram.txt  main_flow.txt
